Add Product to Model, Repo and API
